[package]
name = "siege"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
# opt-level = 'z' # wasm less size 


[dependencies]
# bevy-inspector-egui= "0.26"
avian3d = "0.1.2"
bevy_gltf_components = "0.6"
bevy_registry_export = "0.4"
bevy_panorbit_camera= "0.20.0"
fastrand = "2.1.1"

[dependencies.bevy]
version="0.14.2"
default-features = false
features = [
    # "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_state",
    # "bevy_gilrs",
    # "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    # "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    # "bevy_sprite",
    # "bevy_text",
    # "bevy_ui",
    "png",
    # "jpeg",
    #"ktx2",   # Preferred format for GPU textures
    #"zstd",   # ZSTD compression support in KTX2 files
    # "hdr",
    # "vorbis",
    # "x11",
    # "bevy_gizmos",
    # "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    # "webgl2",
    
    # optional ---
    "dynamic_linking",  #FOR DEBUG!!!
]

#wasm-bindgen --no-typescript --target web  --out-dir E:\dev\sources\rust\bevy\siege-web   --out-name "siege"  ./target/wasm32-unknown-unknown/release/siege.wasm
# cargo build --target wasm32-unknown-unknown --release